create slide of index

--- a/slides/index.html
+++ b/slides/index.html
@@ -2,5 +2,28 @@
   <span class="nonsplit">耐障害性が高くマルチコア性能を最大限発揮できる</span><span class="nonsplit">Elixir(エリクサー)を学んでみよう</span>
 </h3>
 <h4 class="center">
-  <span class="nonsplit"><span class="heading">山崎 進 &nbsp;</span></span><span class="nonsplit"><span class="heading">高瀬 英希 &nbsp;</span></span><img class="heading30" src="resources/images/fukuokaex_logo_only_original.png" />
+  <span class="nonsplit"><span class="heading">北九州市立大学 山崎 進 &nbsp;</span><img class="heading" src="resources/images/ZACKY-3000.jpg" /></span><span class="nonsplit"><span class="heading">京都大学 高瀬 英希 &nbsp;</span><img class="heading" src="resources/images/takase.jpg" /></span>
 </h4>
+<img class="heading center" src="resources/images/fukuokaex_logo_only_original.png" />
+<p></p>
+<div class="small">
+  <ul>
+  <li>長らく組込みソフトウェア開発にはC言語が使われてきました
+  
+  <ul>
+  <li>最近ではC++やmruby，MicroPython も使われてきだしています</li>
+  </ul></li>
+  <li>とくに<strong>C言語やC++には不満を覚えている</strong>人も多くいらっしゃるのではないでしょうか
+  
+  <ul>
+  <li>また，<strong>例外処理やマルチコア対応に苦労している</strong>方も少なくないでしょう</li>
+  </ul></li>
+  </ul>
+  
+</div>
+<p class="center">
+  <span class="strong heading">Elixir</span><span class="heading">&#40;エリクサー&#41; &nbsp;</span><img class="heading30" src="resources/images/logo.png" /><span class="heading">&nbsp; は，最近登場した新しいプログラミング言語です</span>
+</p>
+<p class="center">
+  <span>私たちは</span><span class="strong">組込みシステム/IoT用途にElixirが使える</span><span>と期待しています</span>
+</p>
