update header of slide of parallelism-1

--- a/slides/parallelism-1.html
+++ b/slides/parallelism-1.html
@@ -1,5 +1,5 @@
 <h3>
-  <span class="nonsplit heading">C言語 のここがダメ!!</span><span class="nonsplit heading">その1</span>
+  <span class="nonsplit heading">C言語 のここがツライ。。。</span><span class="nonsplit heading">その1</span>
 </h3>
 <h2>
   <span class="nonsplit strong heading">並列処理は一苦労</span>
