update slide of parallelism-1

--- a/slides/parallelism-1.html
+++ b/slides/parallelism-1.html
@@ -7,14 +7,13 @@
   </h2>
 </div>
 <div class="small">
-  <ul>
-  <li><strong>C言語でマルチコア対応</strong>とかって，<strong>大変!!</strong>ですよね。
-  
+  <p class="center">
+    <span class="strong">C言語でマルチコア対応</span><span>とかって，</span><span class="strong">大変!!</span><span>ですよね</span>
+  </p>
   <ul>
   <li>同期や排他制御をかなり神経質にコーディングしないといけない</li>
   <li>デッドロックとか優先度逆転とかにも気を配らないといけない</li>
   <li>苦労してコーディングしても，そんなに性能が上がらない</li>
-  </ul></li>
   </ul>
   
 </div>
