create slide of embedded and update title of embedded

--- a/slides/micro-elixir-1.html
+++ b/slides/micro-elixir-1.html
@@ -9,7 +9,7 @@
   <ul>
   <li>最適化しやすいように言語仕様をチューニング</li>
   <li>LLVM を拡張した Polymorphic LLVM によるインラインアセンブリコード記述</li>
-  <li>組込み/IoT用途: 省メモリ，ハードリアルタイム</li>
+  <li>組込み/IoT用途: 省メモリ，互換性，ハードリアルタイム</li>
   <li>ネイティブなコールバック方式のマルチタスク機構 Sabotender</li>
   <li>アノテーションによるマルチコアCPU/GPU活用 Hastega</li>
   <li>高耐障害性のプロセス独立メモリ管理機構</li>
