add description to slide of responsibility-1

--- a/slides/responsibility-1.html
+++ b/slides/responsibility-1.html
@@ -6,3 +6,23 @@
     <span class="nonsplit strong heading">Ruby on Railsと同等以上の生産性で，</span><span class="nonsplit strong heading">驚異の高レスポンス性能を誇るPhoenix</span>
   </h2>
 </div>
+<div class="small">
+  <ul>
+  <li>Elixir の作者の José Valim は Ruby on Rails のコアコミッター
+  
+  <ul>
+  <li>Elixir の文法やエコシステムは Ruby の影響を受けている</li>
+  <li>Phoenix も同様に Ruby on Rails の影響を受けている</li>
+  <li>つまり Phoenix は Ruby on Rails と少なくとも同等の生産性を誇る</li>
+  <li>Ruby や Rails にない洗練された機能を有するので同等以上かもしれない</li>
+  </ul></li>
+  <li>Elixir は Erlang VM で動作する
+  
+  <ul>
+  <li>Elixir は Erlang の高い並列性と耐障害性を受け継ぐ</li>
+  <li>Phoenix は Elixir の性能を存分に発揮するように設計されている</li>
+  </ul></li>
+  <li>Phoenix の WebSocket は他の追従を許さない高速性・高レスポンス性を誇る</li>
+  </ul>
+  
+</div>
