update slide of memory-2

--- a/slides/memory-2.html
+++ b/slides/memory-2.html
@@ -3,6 +3,12 @@
     <span class="nonsplit heading">Elixir &nbsp;</span><img class="heading30" src="resources/images/logo.png" /><span class="nonsplit heading">&nbsp; のここがイケている &nbsp;</span><span class="nonsplit heading">その4</span>
   </h3>
   <h2>
-    <span class="nonsplit strong heading">プロセスごとの堅牢なメモリ管理で，</span><span class="nonsplit strong heading">障害監視の仕組みが整っている</span><span class="nonsplit strong heading">障害時に他に影響せず再起動OK!</span><span class="nonsplit strong heading">例外処理に気を配らなくていい</span>
+    <span class="nonsplit strong heading">プロセスごとの堅牢なメモリ管理で，</span><span class="nonsplit strong heading">障害監視の仕組みが整っている</span>
+  </h2>
+  <h2>
+    <span class="nonsplit strong heading">障害時に他に影響せず再起動OK!</span>
+  </h2>
+  <h2>
+    <span class="nonsplit strong heading">例外処理に気を配らなくていい</span>
   </h2>
 </div>
